@@ -1,6 +1,12 @@
 aurex-meta (1.197+aurex10.04.0) UNRELEASED; urgency=low
 
   * Initial release.
-  * Imported lucid seeds from launchpad
+  * Imported lucid seeds from launchpad.
+  * Current seeds: aurex-minimal, aurex-standard, aurex-desktop and
+    aurex-supported
+  * Current metapackages: (ubuntu-minimal, ubuntu-standard, ubuntu-desktop)
+    aurex-minimal, aurex-standard and aurex-desktop
+  * Current sources: ubuntu, aurex, ppa-bisigi-gtk-themes, ppa-faenza-icons,
+    ppa-firefox-stable, ppa-libreoffice, ppa-libvirt and ppa-zentyal-2.1
 
  -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 29 Aug 2011 09:59:02 +0200
